--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "workouter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/workouter-app",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.3",
